--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@notionhq/client": "^2.2.2",
     "commander": "^9.3.0",
+    "cors": "^2.8.5",
     "deepl-node": "^1.3.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
