--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "commander": "^10.0.1",
     "deepl-node": "^1.9.0",
     "dotenv": "^16.0.3",
-    "open": "^9.1.0"
+    "open": "8.4.2"
   }
 }
